--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link href="css/style.css" rel="stylesheet"/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet"/>
     </head>
     <body>
         <div class="main">
@@ -16,18 +17,46 @@
                 <div class="top-bar-right">
                     <ul>
                         <li>My Account &#9662;
-                            <ul class="my-account-list">
+                            <ul>
                                 <li>Sign in</li>
                                 <li>Sign up</li>
                             </ul>
                         </li>
                         <li>USD &#9662;
+                            <ul style="left: 450px !important;">
+                                <li>EUR</li>
+                                <li>GBP</li>
+                                <li>CAD</li>
+                            </ul>
                         </li>
                         <li>EN &#9662;
                         </li>
                     </ul>
                 </div>
             </div>
+            <div class="logo-and-search">
+               <div class="logo flex-container">
+                <div class="multi">
+                    <h1>MULTI</h1>
+                </div>
+                <div class="shop">
+                    <h1>SHOP</h1>
+                </div>
+               </div>
+               <div class="search-input">
+                 <input type="text" placeholder="Search for products"/>
+                 <i class="fa fa-search"></i>
+               </div>
+               <div class="customer-label">
+                <span>Customer Service</span>
+                <span>+012&nbsp;345&nbsp;6789</span>
+               </div>
+            </div>
+            <nav>
+                <div class="category-list"></div>
+                <div class="navigation-menu"></div>
+                <div class="wishlist-and-cart"></div>
+            </nav>
         </div>
     </body>
 </html>
