--- a/template/index.html
+++ b/template/index.html
@@ -53,8 +53,32 @@
                </div>
             </div>
             <nav>
-                <div class="category-list"></div>
-                <div class="navigation-menu"></div>
+                <div class="category-list">
+                    <h1>
+                        <i class="fa fa-bars"></i>
+                        <span>Categories</span>
+                        <span>&#9662</span>
+                    </h1>  
+                    <ul>
+                        <li>Category Item -1</li>
+                        <li>Category Item -2</li>
+                        <li>Category Item -3</li>
+                        <li>Category Item -4</li>
+                        <li>Category Item -5</li>
+                        <li>Category Item -6</li>
+                        <li>Category Item -7</li>
+                        <li>Category Item -8</li>
+                    </ul>  
+                </div>
+                <div class="navigation-menu">
+                    <ul>
+                        <li>Home</li>
+                        <li>Shop</li>
+                        <li>Shop Details</li>
+                        <li>Pages &#9662;</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
                 <div class="wishlist-and-cart"></div>
             </nav>
         </div>
