--- a/template/index.html
+++ b/template/index.html
@@ -71,16 +71,51 @@
                     </ul>  
                 </div>
                 <div class="navigation-menu">
+                   <span>Home</span>
+                   <span>Shop</span>
+                   <span>Shop Details</span>
+                   <span>Pages &#9662;
                     <ul>
-                        <li>Home</li>
-                        <li>Shop</li>
-                        <li>Shop Details</li>
-                        <li>Pages &#9662;</li>
-                        <li>Contact</li>
+                        <li>Shopping Cart</li>
+                        <li>Checkout</li>
                     </ul>
+                   </span>
+                   <span>Contact</span>
                 </div>
-                <div class="wishlist-and-cart"></div>
+                <div class="wishlist-and-cart">
+                    <span class="fas fa-heart"></span>
+                    <span>0</span>
+                    <span class="fas fa-shopping-cart" style="margin-left: 20px;"></span>
+                    <span>0</span>
+                </div>
             </nav>
+            <div class="banner-images">
+                <div class="left-image">
+                   <div class="content-div"> 
+                    <h1>Men Fashion</h1>
+                    <p style="text-align: center;">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p>
+                    <button>Shop Now</button>
+                   </div>
+                </div>
+                <div class="right-images">
+                    <div class="top-image">
+                        <img src="https://themewagon.github.io/multishop/img/offer-1.jpg"/>
+                        <div class="right-content-div">
+                            <span>SAVE 20%</span>
+                            <h1>Special Offer</h1>
+                            <button>Shop Now</button>
+                        </div>
+                    </div>
+                    <div class="top-image">
+                        <img src="https://themewagon.github.io/multishop/img/offer-2.jpg"/>
+                        <div class="right-content-div">
+                            <span>SAVE 20%</span>
+                            <h1>Special Offer</h1>
+                            <button>Shop Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
