--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
         <link href="css/style.css" rel="stylesheet"/>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet"/>
     </head>
-    <body>
+    <body style="background-color: #F5F5F5;">
         <div class="main">
             <div class="top-bar">
                 <div class="top-bar-left">
@@ -116,6 +116,142 @@
                     </div>
                 </div>
             </div>
+            <div class="service">
+                <div>
+                    <i class="fa fa-check"></i>
+                    <span>Quality Product</span>
+                </div>
+                <div>
+                    <i class="fa fa-shipping-fast"></i>
+                    <span>Free Shipping</span>
+                </div>
+                <div>
+                    <i class="fas fa-exchange-alt"></i>
+                    <span>14 Day Return</span>
+                </div>
+                <div>
+                    <i class="fa fa-phone-volume"></i>
+                    <span>24/7 Support</span>
+                </div>
+            </div>
+            <div class="category-heading">
+              <span>CATEGORIES</span> <span>----------------------------------------------------------------------------------------------------------------------------</span>---------------------------------------------</h1>
+            </div>
+            <div class="category-items">
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+                <div>
+                    <div class="category-image">
+                        <img src="	https://themewagon.github.io/multishop/img/cat-1.jpg" width="100%" height="100%"/>
+                    </div>
+                    <div class="category-info">
+                        <span>Category Name</span>
+                        <span>100 Products</span>
+                    </div>
+                </div>
+            </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </body>
 </html>
