--- a/template/index.html
+++ b/template/index.html
@@ -247,6 +247,191 @@
                     </div>
                 </div>
             </div>
+
+            <div class="featured-products-container">
+               <div class="featured-product"> 
+                 <div class="image-container">
+                    <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                    <div class="options">
+                        <span class="fa fa-shopping-cart"></span>
+                        <span class="far fa-heart"></span>
+                        <span class="fa fa-sync-alt"></span>
+                        <span class="fa fa-search"></span>
+                    </div>
+                 </div>
+                 <div class="product-info">
+                    <p>Product name goes here</p>
+                    <span>$123.00 <del>$123.00</del></span>
+                    <div>
+                      <small class="fa fa-star"></small>
+                      <small class="fa fa-star"></small>
+                      <small class="fa fa-star"></small>
+                      <small class="fa fa-star"></small>
+                      <small class="fa fa-star"></small>
+                    </div> 
+                </div>
+                </div>
+                <div class="featured-product"> 
+                    <div class="image-container">
+                       <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                       <div class="options">
+                           <span class="fa fa-shopping-cart"></span>
+                           <span class="far fa-heart"></span>
+                           <span class="fa fa-sync-alt"></span>
+                           <span class="fa fa-search"></span>
+                       </div>
+                    </div>
+                    <div class="product-info">
+                       <p>Product name goes here</p>
+                       <span>$123.00 <del>$123.00</del></span>
+                       <div>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                       </div> 
+                   </div>
+                </div>
+                <div class="featured-product"> 
+                    <div class="image-container">
+                       <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                       <div class="options">
+                           <span class="fa fa-shopping-cart"></span>
+                           <span class="far fa-heart"></span>
+                           <span class="fa fa-sync-alt"></span>
+                           <span class="fa fa-search"></span>
+                       </div>
+                    </div>
+                    <div class="product-info">
+                       <p>Product name goes here</p>
+                       <span>$123.00 <del>$123.00</del></span>
+                       <div>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                       </div> 
+                   </div>
+                </div>
+                <div class="featured-product"> 
+                    <div class="image-container">
+                       <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                       <div class="options">
+                           <span class="fa fa-shopping-cart"></span>
+                           <span class="far fa-heart"></span>
+                           <span class="fa fa-sync-alt"></span>
+                           <span class="fa fa-search"></span>
+                       </div>
+                    </div>
+                    <div class="product-info">
+                       <p>Product name goes here</p>
+                       <span>$123.00 <del>$123.00</del></span>
+                       <div>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                       </div> 
+                   </div>
+                </div>
+
+                <div class="featured-product"> 
+                    <div class="image-container">
+                       <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                       <div class="options">
+                           <span class="fa fa-shopping-cart"></span>
+                           <span class="far fa-heart"></span>
+                           <span class="fa fa-sync-alt"></span>
+                           <span class="fa fa-search"></span>
+                       </div>
+                    </div>
+                    <div class="product-info">
+                       <p>Product name goes here</p>
+                       <span>$123.00 <del>$123.00</del></span>
+                       <div>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                         <small class="fa fa-star"></small>
+                       </div> 
+                   </div>
+                   </div>
+                   <div class="featured-product"> 
+                       <div class="image-container">
+                          <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                          <div class="options">
+                              <span class="fa fa-shopping-cart"></span>
+                              <span class="far fa-heart"></span>
+                              <span class="fa fa-sync-alt"></span>
+                              <span class="fa fa-search"></span>
+                          </div>
+                       </div>
+                       <div class="product-info">
+                          <p>Product name goes here</p>
+                          <span>$123.00 <del>$123.00</del></span>
+                          <div>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                          </div> 
+                      </div>
+                   </div>
+                   <div class="featured-product"> 
+                       <div class="image-container">
+                          <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                          <div class="options">
+                              <span class="fa fa-shopping-cart"></span>
+                              <span class="far fa-heart"></span>
+                              <span class="fa fa-sync-alt"></span>
+                              <span class="fa fa-search"></span>
+                          </div>
+                       </div>
+                       <div class="product-info">
+                          <p>Product name goes here</p>
+                          <span>$123.00 <del>$123.00</del></span>
+                          <div>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                          </div> 
+                      </div>
+                   </div>
+                   <div class="featured-product"> 
+                       <div class="image-container">
+                          <img src="https://themewagon.github.io/multishop/img/product-1.jpg"/>
+                          <div class="options">
+                              <span class="fa fa-shopping-cart"></span>
+                              <span class="far fa-heart"></span>
+                              <span class="fa fa-sync-alt"></span>
+                              <span class="fa fa-search"></span>
+                          </div>
+                       </div>
+                       <div class="product-info">
+                          <p>Product name goes here</p>
+                          <span>$123.00 <del>$123.00</del></span>
+                          <div>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                            <small class="fa fa-star"></small>
+                          </div> 
+                      </div>
+                   </div>
+            </div>
+
+            
+        </div>
+        <div class="scroll-icon">
+            <i class="fa fa-angle-double-up"></i>
         </div>
         <br>
         <br>
